--- a/tasks/cat2.yml
+++ b/tasks/cat2.yml
@@ -5,7 +5,6 @@
 # V-38521 is checked but not automatically patched, please see not_automated.yml
 # V-38658 is not implemented yet
 # V-51875 is not implemented yet
-# V-54381 is not implemented yet
 
 - name: "MEDIUM | V-38443 | AUDIT | The /etc/gshadow file must be owned by root.\n
      \t\tMEDIUM | V-38448 | AUDIT | The /etc/gshadow file must be group-owned by root.\n
@@ -435,98 +434,101 @@
       - file_perms
 
 # --------------------------------   TBD   --------------------------------
-# Todo: pam-module not working
-#
-#- name: "MEDIUM | V-38501 | AUDIT | The system must disable accounts after excessive login failures within a 15-minute interval."
-#  shell: grep -h pam_faillock /etc/pam.d/system-auth /etc/pam.d/password-auth | grep fail_interval | awk -F'=' '{print $NF}'
-#  ignore_errors: yes
-#  changed_when: no
-#  register: login_failures_interval
-#  failed_when: true
-#  tags:
-#    - medium
-#    - cat2
-#    - audit
-#    - always
-#    - logon_settings
-#    - V-38501
-#    - pam
-#
-#- name: "MEDIUM | V-38501 | AUDIT | The system must disable accounts after excessive login failures within a 15-minute interval."
-#  shell: grep -hG '^account\s*required\s*pam_faillock\.so' /etc/pam.d/system-auth /etc/pam.d/password-auth
-#  ignore_errors: yes
-#  changed_when: no
-#  register: login_failures_account_require
-#  failed_when: login_failures_account_require.stdout_lines|length > 0
-#  tags:
-#    - medium
-#    - cat2
-#    - audit
-#    - always
-#    - logon_settings
-#    - V-38501
-#    - pam
-#
-#- name: "MEDIUM | V-38501 | AUDIT | The system must disable accounts after excessive login failures within a 15-minute interval."
-#  assert:
-#      that: 
-#        - "{{ item | integer }} > 900"
-#        - "{{ login_failures_account_require.stdout_lines | length }} == 2"
-#  with_items: login_failures_interval.stdout_lines
-#  ignore_errors: yes
-#  changed_when: no
-#  register: login_failures_interval_audit
-#  failed_when: true
-#  tags:
-#    - medium
-#    - cat2
-#    - audit
-#    - always
-#    - logon_settings
-#    - V-38501
-#    - pam
-#
-#- name: "MEDIUM | V-38501 | PATCH | The system must disable accounts after excessive login failures within a 15-minute interval."
-#  pam:
-#      service: "{{ item }}"
-#      type: auth
-#      control: required
-#      pam_module: pam_faillock.so
-#      before_line: auth sufficient pam_unix.so
-#      arguments: preauth silent deny=3 unlock_time=604800 fail_interval=900
-#      state: present
-#  with_items:
-#      - password-auth
-#      - system-auth
-#  tags:
-#      - medium
-#      - cat2
-#      - logon_settings
-#      - patch
-#      - V-38501
-#      - pam
-#
-#- name: "MEDIUM | V-38501 | PATCH | The system must disable accounts after excessive login failures within a 15-minute interval."
-#  pam:
-#      service: "{{ item }}"
-#      type: auth
-#      control: '[default=die]'
-#      pam_module: pam_faillock.so
-#      after_line: auth sufficient pam_unix.so
-#      arguments: authfail deny=3 unlock_time=604800 fail_interval=900
-#      state: present
-#  with_items:
-#      - password-auth
-#      - system-auth
-#  tags:
-#      - medium
-#      - cat2
-#      - logon_settings
-#      - patch
-#      - V-38501
-#      - pam
-#
-# ------------------------------------------------------------------------------------------
+- name: "MEDIUM | V-38501 | AUDIT | The system must disable accounts after excessive login failures within a 15-minute interval.\n
+     \t\tMEDIUM | V-38573 | AUDIT | The system must disable accounts after three consecutive unsuccessful logon attempts.\n
+     \t\tMEDIUM | V-38592 | AUDIT | The system must require administrator action to unlock an account locked by excessive failed login attempts."
+  shell: grep -i '^{{ item.type }}' /etc/pam.d/{{ item.service }} | grep {{ item.control }} | grep '{{ item.arguments }}' | grep {{ item.pam_module }}
+  ignore_errors: yes
+  changed_when: no
+  register: cat2_pam_configuration_audit
+  with_items:
+    - { ref: 'V-38501/V-38573/V-38592', service: 'password-auth', type: 'auth', control: 'required', pam_module: 'pam_faillock.so', arguments: 'preauth silent deny=3 unlock_time=604800 fail_interval=900', before_line: 'auth pam_unix.so', after_line: '' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'system-auth', type: 'auth', control: 'required', pam_module: 'pam_faillock.so', arguments: 'preauth silent deny=3 unlock_time=604800 fail_interval=900', before_line: 'auth pam_unix.so', after_line: '' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'password-auth', type: 'auth', control: '[default=die]', pam_module: 'pam_faillock.so', arguments: 'authfail deny=3 unlock_time=604800 fail_interval=900', before_line: '', after_line: 'auth pam_unix.so' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'system-auth', type: 'auth', control: '[default=die]', pam_module: 'pam_faillock.so', arguments: 'authfail deny=3 unlock_time=604800 fail_interval=900', before_line: '', after_line: 'auth pam_unix.so' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'password-auth', type: 'account', control: 'required', pam_module: 'pam_faillock.so', arguments: '', before_line: 'pam_unix.so', after_line: '' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'system-auth', type: 'account', control: 'required', pam_module: 'pam_faillock.so', arguments: '', before_line: 'pam_unix.so', after_line: '' }
+  loop_control:
+    label: "{{item.ref}} -> {{ item.service }} -> {{ item.type }} {{ item.control }} {{ item.pam_module }}"
+  tags:
+    - medium
+    - cat2
+    - audit
+    - always
+    - V-38501
+    - V-38573
+    - logon_settings
+    - accounts
+    - pam
+
+- name: "MEDIUM | V-38501 | PATCH | The system must disable accounts after excessive login failures within a 15-minute interval.\n
+     \t\tMEDIUM | V-38573 | PATCH | The system must disable accounts after three consecutive unsuccessful logon attempts.\n
+     \t\tMEDIUM | V-38592 | PATCH | The system must require administrator action to unlock an account locked by excessive failed login attempts."
+  pam:
+      service: '{{ item.service }}'
+      type: '{{ item.type }}'
+      control: '{{ item.control }}'
+      pam_module: '{{ item.pam_module }}'
+      arguments: '{{ item.arguments }}'
+      before_line: '{{ item.before_line }}'
+      after_line: '{{ item.after_line }}'
+      state: present
+  with_items:
+    - { ref: 'V-38501/V-38573/V-38592', service: 'password-auth', type: 'auth', control: 'required', pam_module: 'pam_faillock.so', arguments: 'preauth silent deny=3 unlock_time=604800 fail_interval=900', before_line: 'auth pam_unix.so', after_line: '' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'system-auth', type: 'auth', control: 'required', pam_module: 'pam_faillock.so', arguments: 'preauth silent deny=3 unlock_time=604800 fail_interval=900', before_line: 'auth pam_unix.so', after_line: '' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'password-auth', type: 'auth', control: '[default=die]', pam_module: 'pam_faillock.so', arguments: 'authfail deny=3 unlock_time=604800 fail_interval=900', before_line: '', after_line: 'auth pam_unix.so' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'system-auth', type: 'auth', control: '[default=die]', pam_module: 'pam_faillock.so', arguments: 'authfail deny=3 unlock_time=604800 fail_interval=900', before_line: '', after_line: 'auth pam_unix.so' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'password-auth', type: 'account', control: 'required', pam_module: 'pam_faillock.so', arguments: '', before_line: 'account pam_unix.so', after_line: '' }
+    - { ref: 'V-38501/V-38573/V-38592', service: 'system-auth', type: 'account', control: 'required', pam_module: 'pam_faillock.so', arguments: '', before_line: 'account pam_unix.so', after_line: '' }
+  loop_control:
+    label: "{{item.ref}} -> {{ item.service }} -> {{ item.type }} {{ item.control }} {{ item.pam_module }}"
+  when: cat2_pam_configuration_audit|failed
+  tags:
+    - medium
+    - cat2
+    - patch
+    - V-38501
+    - V-38573
+    - logon_settings
+    - accounts
+    - pam
+
+
+- name: "MEDIUM | V-38574 | AUDIT | The system must use a FIPS 140-2 approved cryptographic hashing algorithm for generating account password hashes (system-auth)."
+  shell: grep password /etc/pam.d/* | grep pam_unix.so | grep -v ' sha512 ' | awk  -F ":" '{print $1}'
+  ignore_errors: yes
+  changed_when: no
+  register: pam_pwd_hash_audit
+  failed_when: "{{ pam_pwd_hash_audit.stdout_lines|length }} > 0"
+  tags:
+    - medium
+    - cat2
+    - audit
+    - always
+    - V-38574
+    - logon_settings
+    - accounts
+    - passwords
+    - pam
+
+- name: "MEDIUM | V-38574 | PATCH | The system must use a FIPS 140-2 approved cryptographic hashing algorithm for generating account password hashes (system-auth)."
+  # The PAM module doesn't make sense for this particular rule. Lineinfile works perfectly here.
+  lineinfile:
+      dest: "{{ item }}"
+      backrefs: yes
+      regexp: (^password\s*.*pam_unix.so.*)(md5|sha256|blowfish|bigcrypt)(.*)
+      line: \1sha512\3
+  with_items: '{{ pam_pwd_hash_audit.stdout_lines }}'
+  when: pam_pwd_hash_audit.failed
+  tags:
+    - medium
+    - cat2
+    - patch
+    - V-38574
+    - logon_settings
+    - accounts
+    - passwords
+    - pam
 
 - name: "MEDIUM | V-38502 | AUDIT | The /etc/shadow file must be owned by root.\n
      \t\tMEDIUM | V-38503 | AUDIT | The /etc/shadow file must be group-owned by root.\n
@@ -1019,143 +1021,6 @@
       - network
       - audit
 
-# --------------------------------   TBD   --------------------------------
-# Todo: pam-module not working
-#
-#- name: "MEDIUM | V-38573 | AUDIT | The system must disable accounts after three consecutive unsuccessful logon attempts."
-#  shell: grep -h pam_faillock /etc/pam.d/system-auth /etc/pam.d/password-auth | grep deny=3
-#  ignore_errors: yes
-#  changed_when: no
-#  register: logon_attempts_audit
-#  failed_when: true
-#  tags:
-#    - medium
-#    - cat2
-#    - audit
-#    - always
-#     - V-38573
-#     - logon_settings
-#     - accounts
-#     - pam
-#
-#- name: "MEDIUM | V-38573 | PATCH | The system must disable accounts after three consecutive unsuccessful logon attempts."
-#  pam:
-#      service: "{{ item }}"
-#      type: auth
-#      control: required
-#      pam_module: pam_faillock.so
-#      arguments: preauth silent deny=3 unlock_time=604800 fail_interval=900
-#      before_line: auth sufficient pam_unix.so
-#      state: present 
-#  with_items:
-#      - system-auth
-#      - password-auth
-#  tags:
-#      - medium
-#      - cat2
-#      - V-38573
-#      - logon_settings
-#      - accounts
-#      - patch
-#      - pam
-#
-#- name: "MEDIUM | V-38573 | PATCH | The system must disable accounts after three consecutive unsuccessful logon attempts."
-#  pam:
-#      service: "{{ item }}"
-#      type: auth
-#      control: '[default=die]' 
-#      pam_module: pam_faillock.so
-#      arguments: authfail deny=3 unlock_time=604800 fail_interval=900 
-#      after_line: auth sufficient pam_unix.so
-#      state: present 
-#  with_items:
-#      - system-auth
-#      - password-auth
-#  tags:
-#      - medium
-#      - cat2
-#      - V-38573
-#      - logon_settings
-#      - accounts
-#      - patch
-#      - pam
-#
-#- name: "MEDIUM | V-38573 | PATCH | The system must disable accounts after three consecutive unsuccessful logon attempts."
-#  pam:
-#      service: "{{ item }}"
-#      type: account
-#      control: required 
-#      pam_module: pam_faillock.so
-#      before_line: account required pam_unix.so     
-#      state: present 
-#  with_items:
-#      - system-auth
-#      - password-auth
-#  tags:
-#      - medium
-#      - cat2
-#      - V-38573
-#      - logon_settings
-#      - accounts
-#      - patch
-#      - pam
-#
-# -------------------------------------------------------------------------
-
-#- name: "MEDIUM | V-38574 | AUDIT | The system must use a FIPS 140-2 approved cryptographic hashing algorithm for generating account password hashes (system-auth)."
-#  shell: find /etc/pam.d/ -type f -not -name '*.*' 
-#  ignore_errors: yes
-#  changed_when: no
-#  register: pamd_files
-#  failed_when: true
-#  tags:
-#    - medium
-#    - cat2
-#    - audit
-#    - always
-#    - V-38574
-#    - logon_settings
-#    - accounts
-#    - passwords
-#    - pam
-#
-#- name: "MEDIUM | V-38574 | AUDIT | The system must use a FIPS 140-2 approved cryptographic hashing algorithm for generating account password hashes (system-auth)."
-#  shell: grep password -h /etc/pam.d/* | grep pam_unix.so | awk '{print $4}'
-#  ignore_errors: yes
-#  changed_when: no
-#  register: pam_pwd_hash_audit
-#  failed_when: true
-#  tags:
-#    - medium
-#    - cat2
-#    - audit
-#    - always
-#    - V-38574
-#    - logon_settings
-#    - accounts
-#    - passwords
-#
-#- name: "MEDIUM | V-38574 | PATCH | The system must use a FIPS 140-2 approved cryptographic hashing algorithm for generating account password hashes (system-auth)."
-#  # The PAM module doesn't make sense for this particular rule. Lineinfile works perfectly here.
-#  lineinfile:
-#      dest: "{{ item }}"
-#      backrefs: yes
-#      regexp: (^password\s*.*pam_unix.so.*)(md5|sha256|blowfish|bigcrypt)(.*) 
-#      line: \1sha512\3
-#      backup: yes
-#  with_items: pamd_files.stdout_lines
-#  tags:
-#      - medium
-#      - cat2
-#      - V-38574
-#      - logon_settings
-#      - accounts
-#      - passwords
-#      - patch
-#      - pam
-#
-# -------------------------------------------------------------------------
-
 - name: "MEDIUM | V-38576 | AUDIT | The system must use a FIPS 140-2 approved cryptographic hashing algorithm for generating account password hashes (login.defs)"
   shell: grep '^ENCRYPT_METHOD' /etc/login.defs | awk '{print $2}'
   ignore_errors: yes
@@ -1425,89 +1290,6 @@
       - interactive_boot
       - patch
 
-# --------------------------------   TBD   --------------------------------
-# Todo: pam-module not working
-#
-#- name: "MEDIUM | V-38592 | AUDIT | The system must require administrator action to unlock an account locked by excessive failed login attempts." 
-#  shell: grep -h pam_faillock /etc/pam.d/system-auth /etc/pam.d/password-auth | grep unlock_time
-#  ignore_errors: yes
-#  changed_when: no
-#  register: admin_unlock_audit
-#  failed_when: true
-#  tags:
-#    - medium
-#    - cat2
-#    - audit
-#    - always
-#    - V-38592
-#    - logon_settings
-#    - accounts
-#    - pam
-#
-#- name: "MEDIUM | V-38592 | PATCH | The system must require administrator action to unlock an account locked by excessive failed login attempts." 
-#  pam:
-#      service: "{{ item }}"
-#      type: auth
-#      control: required
-#      pam_module: pam_faillock.so
-#      arguments: preauth silent deny=3 unlock_time=604800 fail_interval=900
-#      before_line: auth sufficient pam_unix.so
-#      state: present 
-#  with_items:
-#      - system-auth
-#      - password-auth
-#  tags:
-#      - medium
-#      - cat2
-#      - V-38573
-#      - logon_settings
-#      - accounts
-#      - patch
-#      - pam
-#
-#- name: "MEDIUM | V-38592 | PATCH | The system must require administrator action to unlock an account locked by excessive failed login attempts." 
-#  pam:
-#      service: "{{ item }}"
-#      type: auth
-#      control: '[default=die]' 
-#      pam_module: pam_faillock.so
-#      arguments: authfail deny=3 unlock_time=604800 fail_interval=900 
-#      after_line: auth sufficient pam_unix.so
-#      state: present 
-#  with_items:
-#      - system-auth
-#      - password-auth
-#  tags:
-#      - medium
-#      - cat2
-#      - V-38573
-#      - logon_settings
-#      - accounts
-#      - patch
-#      - pam
-#
-#- name: "MEDIUM | V-38592 | PATCH | The system must require administrator action to unlock an account locked by excessive failed login attempts." 
-#  pam:
-#      service: "{{ item }}"
-#      type: account
-#      control: required 
-#      pam_module: pam_faillock.so
-#      before_line: account required pam_unix.so     
-#      state: present 
-#  with_items:
-#      - system-auth
-#      - password-auth
-#  tags:
-#      - medium
-#      - cat2
-#      - V-38573
-#      - logon_settings
-#      - accounts
-#      - patch
-#      - pam
-#
-# -------------------------------------------------------------------------
-
 - name: "MEDIUM | V-38603 | AUDIT | The ypserv package must not be installed."
   command: rpm -q ypserv
   ignore_errors: yes
@@ -1679,8 +1461,8 @@
     - ssh
 
 
-# Postfix should be used instead.
 - name: "MEDIUM | V-38671 | AUDIT | The sendmail package must be removed."
+  # Postfix should be used instead.
   command: rpm -q sendmail postfix
   ignore_errors: yes
   changed_when: no
@@ -1744,7 +1526,7 @@
       - gui
       - patch
 
-## V-38630: Not implemented yet
+## ToDo: V-38630: Not implemented yet
 #- name: "MEDIUM | V-38630 | AUDIT | The graphical desktop environment must automatically lock after 15 minutes of inactivity and the system must require user to re-authenticate to unlock the environment"
 #  when: cent7stig_xwindows_required
 #  tags: [ 'medium' , 'cat2' , 'V-38630' , 'xwindows' , 'gui' , 'screen_lock' ]
@@ -1869,8 +1651,8 @@
       - auditd
       - audit
 
-# modinfo bluetooth indicates bluetooth as alias for net-pf-31
 - name: "MEDIUM | V-38691 | AUDIT | The Bluetooth service must be disabled"
+  # modinfo bluetooth indicates bluetooth as alias for net-pf-31
   shell: find /etc/modprobe{.conf,.d/*} -exec grep -ls '^install bluetooth /bin/false' {} \; ;find /etc/modprobe{.conf,.d/*} -exec grep -ls '^install net-pf-31 /bin/false' {} \;
   ignore_errors: yes
   changed_when: no
